# nix_coreutils

./: flake.nix  pyproject.toml
