[tool.poetry]
name = "nix-cpp-safety"
version = "0.1.0"
description = ""
authors = ["Roland Coeurjoly <rolandcoeurjoly@gmail.com>"]
packages = [
    { include = "nix-cpp-safety" }
]

[tool.poetry.dependencies]
python = "^3.10"
wllvm = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
